<resources>
    <string name="app_name">Hesap Makinası</string>
    <string name="coma">.</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="evaluate">=</string>
    <string name="back">&lt;-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="underline">_</string>
    <string name="plusMinus">+ / -</string>
</resources>
