<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bilalekremharmansa.calculator.MainActivity">

    <TextView
        android:id="@+id/txtOperationLine"
        android:layout_width="270dp"
        android:layout_height="68dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/holo_blue_dark"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="21dp"
        tools:layout_editor_absoluteX="93dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/gridLayout"
        android:layout_alignStart="@+id/gridLayout" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:columnCount="4"

        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOperationLine"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/gridLayout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="85dp"
            android:layout_height="80dp"

            android:layout_column="3"
            android:layout_row="0"
            android:text="@string/add"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSub"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/sub"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnMul"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="3"
            android:layout_row="2"
            android:text="@string/mul"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="3"
            android:layout_row="3"
            android:text="@string/div"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnNum7"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_gravity="top|start"
            android:layout_row="1"
            android:text="@string/seven"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnNum8"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/eight"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnNum9"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/nine"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnNum4"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/four"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnNum5"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/five"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnNum6"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/six"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/back"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnNum1"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_gravity="top|start"
            android:layout_row="3"
            android:text="@string/one"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnNum2"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/two"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnNum3"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/three"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnBracketC"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/closeBracket"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnNum0"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="4"
            android:text="@string/zero"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnPlusMinus"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_row="4"
            android:hint="@string/underline"
            android:text="@string/plusMinus"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnComa"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_row="4"
            android:text="@string/coma"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="3"
            android:layout_row="4"
            android:text="@string/evaluate"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnBracketO"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/openBracket"
            android:textSize="18sp" />


    </GridLayout>

</RelativeLayout>
